feat(weather): define models city and weather, define controllers, city seeder
