# routes/api.php
@@ -1,6 +1,9 @@
 <?php
 
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\CityController;
+use App\Http\Controllers\UserController;
+use App\Http\Controllers\WeatherController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -12,4 +15,8 @@ Route::post('/login', [AuthController::class, 'login']);
 
 Route::middleware('auth:sanctum')->group(function() {
     Route::post('/logout', [AuthController::class,  'logout']);
+    Route::apiResource('users', UserController::class);
+    Route::apiResource('cities', CityController::class);
+    Route::apiResource('weather', WeatherController::class);
+    Route::get('/weather/search', [WeatherController::class, 'search']);
 });
